parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Unused terminals:

    PACKAGE
    SWITCH
    SSCAN
    TYPE
    GOTO
    CONTINUE
    SPRINT
    INTERFACE
    GO
    STRUCT
    SEMICOLON
    BREAK
    SELECT
    MAP
    EQUALS
    VAR
    CONST
    CASE
    CHAN
    FALLTHROUGH
    RANGE
    RETURN
    DEFER
    STRING
    DEFAULT
    COMMENT
    IMPORT

Grammar

Rule 0     S' -> statement
Rule 1     statement -> FUNC MAIN LPAREN RPAREN LCURLBRACKET list RCURLBRACKET
Rule 2     list -> inst
Rule 3     list -> inst list
Rule 4     inst -> ID ASSIGN expressionAR
Rule 5     inst -> ID ASSIGN expressionBo
Rule 6     inst -> FOR expressionBo LCURLBRACKET list RCURLBRACKET
Rule 7     inst -> IF expressionBo LCURLBRACKET list RCURLBRACKET ELSE LCURLBRACKET list RCURLBRACKET
Rule 8     inst -> IF expressionBo LCURLBRACKET list RCURLBRACKET
Rule 9     inst -> expressionAR
Rule 10    inst -> expressionBo
Rule 11    expressionAR -> expressionAR PLUS expressionAR
Rule 12    expressionAR -> expressionAR MINUS expressionAR
Rule 13    expressionAR -> expressionAR TIMES expressionAR
Rule 14    expressionAR -> expressionAR DIVIDE expressionAR
Rule 15    expressionAR -> INT
Rule 16    expressionAR -> FLOAT
Rule 17    expressionAR -> LPAREN expressionAR RPAREN
Rule 18    expressionBo -> expressionBo MORE expressionBo
Rule 19    expressionBo -> expressionBo LESS expressionBo
Rule 20    expressionBo -> expressionBo MOREEQUAL expressionBo
Rule 21    expressionBo -> expressionBo LESSEQUAL expressionBo
Rule 22    expressionBo -> expressionBo NOTEQUAL expressionBo
Rule 23    expressionBo -> expressionBo EQUALSTO expressionBo
Rule 24    expressionBo -> ID
Rule 25    expressionBo -> TRUE
Rule 26    expressionBo -> FALSE
Rule 27    expressionBo -> LPAREN expressionBo RPAREN

Terminals, with rules where they appear

ASSIGN               : 4 5
BREAK                : 
CASE                 : 
CHAN                 : 
COMMENT              : 
CONST                : 
CONTINUE             : 
DEFAULT              : 
DEFER                : 
DIVIDE               : 14
ELSE                 : 7
EQUALS               : 
EQUALSTO             : 23
FALLTHROUGH          : 
FALSE                : 26
FLOAT                : 16
FOR                  : 6
FUNC                 : 1
GO                   : 
GOTO                 : 
ID                   : 4 5 24
IF                   : 7 8
IMPORT               : 
INT                  : 15
INTERFACE            : 
LCURLBRACKET         : 1 6 7 7 8
LESS                 : 19
LESSEQUAL            : 21
LPAREN               : 1 17 27
MAIN                 : 1
MAP                  : 
MINUS                : 12
MORE                 : 18
MOREEQUAL            : 20
NOTEQUAL             : 22
PACKAGE              : 
PLUS                 : 11
RANGE                : 
RCURLBRACKET         : 1 6 7 7 8
RETURN               : 
RPAREN               : 1 17 27
SELECT               : 
SEMICOLON            : 
SPRINT               : 
SSCAN                : 
STRING               : 
STRUCT               : 
SWITCH               : 
TIMES                : 13
TRUE                 : 25
TYPE                 : 
VAR                  : 
error                : 

Nonterminals, with rules where they appear

expressionAR         : 4 9 11 11 12 12 13 13 14 14 17
expressionBo         : 5 6 7 8 10 18 18 19 19 20 20 21 21 22 22 23 23 27
inst                 : 2 3
list                 : 1 3 6 7 7 8
statement            : 0

Parsing method: LALR

state 0

    (0) S' -> . statement
    (1) statement -> . FUNC MAIN LPAREN RPAREN LCURLBRACKET list RCURLBRACKET

    FUNC            shift and go to state 2

    statement                      shift and go to state 1

state 1

    (0) S' -> statement .



state 2

    (1) statement -> FUNC . MAIN LPAREN RPAREN LCURLBRACKET list RCURLBRACKET

    MAIN            shift and go to state 3


state 3

    (1) statement -> FUNC MAIN . LPAREN RPAREN LCURLBRACKET list RCURLBRACKET

    LPAREN          shift and go to state 4


state 4

    (1) statement -> FUNC MAIN LPAREN . RPAREN LCURLBRACKET list RCURLBRACKET

    RPAREN          shift and go to state 5


state 5

    (1) statement -> FUNC MAIN LPAREN RPAREN . LCURLBRACKET list RCURLBRACKET

    LCURLBRACKET    shift and go to state 6


state 6

    (1) statement -> FUNC MAIN LPAREN RPAREN LCURLBRACKET . list RCURLBRACKET
    (2) list -> . inst
    (3) list -> . inst list
    (4) inst -> . ID ASSIGN expressionAR
    (5) inst -> . ID ASSIGN expressionBo
    (6) inst -> . FOR expressionBo LCURLBRACKET list RCURLBRACKET
    (7) inst -> . IF expressionBo LCURLBRACKET list RCURLBRACKET ELSE LCURLBRACKET list RCURLBRACKET
    (8) inst -> . IF expressionBo LCURLBRACKET list RCURLBRACKET
    (9) inst -> . expressionAR
    (10) inst -> . expressionBo
    (11) expressionAR -> . expressionAR PLUS expressionAR
    (12) expressionAR -> . expressionAR MINUS expressionAR
    (13) expressionAR -> . expressionAR TIMES expressionAR
    (14) expressionAR -> . expressionAR DIVIDE expressionAR
    (15) expressionAR -> . INT
    (16) expressionAR -> . FLOAT
    (17) expressionAR -> . LPAREN expressionAR RPAREN
    (18) expressionBo -> . expressionBo MORE expressionBo
    (19) expressionBo -> . expressionBo LESS expressionBo
    (20) expressionBo -> . expressionBo MOREEQUAL expressionBo
    (21) expressionBo -> . expressionBo LESSEQUAL expressionBo
    (22) expressionBo -> . expressionBo NOTEQUAL expressionBo
    (23) expressionBo -> . expressionBo EQUALSTO expressionBo
    (24) expressionBo -> . ID
    (25) expressionBo -> . TRUE
    (26) expressionBo -> . FALSE
    (27) expressionBo -> . LPAREN expressionBo RPAREN

    ID              shift and go to state 10
    FOR             shift and go to state 11
    IF              shift and go to state 17
    INT             shift and go to state 16
    FLOAT           shift and go to state 12
    LPAREN          shift and go to state 14
    TRUE            shift and go to state 13
    FALSE           shift and go to state 18

    expressionAR                   shift and go to state 7
    inst                           shift and go to state 8
    list                           shift and go to state 15
    expressionBo                   shift and go to state 9

state 7

    (9) inst -> expressionAR .
    (11) expressionAR -> expressionAR . PLUS expressionAR
    (12) expressionAR -> expressionAR . MINUS expressionAR
    (13) expressionAR -> expressionAR . TIMES expressionAR
    (14) expressionAR -> expressionAR . DIVIDE expressionAR

    ID              reduce using rule 9 (inst -> expressionAR .)
    FOR             reduce using rule 9 (inst -> expressionAR .)
    IF              reduce using rule 9 (inst -> expressionAR .)
    INT             reduce using rule 9 (inst -> expressionAR .)
    FLOAT           reduce using rule 9 (inst -> expressionAR .)
    LPAREN          reduce using rule 9 (inst -> expressionAR .)
    TRUE            reduce using rule 9 (inst -> expressionAR .)
    FALSE           reduce using rule 9 (inst -> expressionAR .)
    RCURLBRACKET    reduce using rule 9 (inst -> expressionAR .)
    PLUS            shift and go to state 21
    MINUS           shift and go to state 20
    TIMES           shift and go to state 22
    DIVIDE          shift and go to state 19


state 8

    (2) list -> inst .
    (3) list -> inst . list
    (2) list -> . inst
    (3) list -> . inst list
    (4) inst -> . ID ASSIGN expressionAR
    (5) inst -> . ID ASSIGN expressionBo
    (6) inst -> . FOR expressionBo LCURLBRACKET list RCURLBRACKET
    (7) inst -> . IF expressionBo LCURLBRACKET list RCURLBRACKET ELSE LCURLBRACKET list RCURLBRACKET
    (8) inst -> . IF expressionBo LCURLBRACKET list RCURLBRACKET
    (9) inst -> . expressionAR
    (10) inst -> . expressionBo
    (11) expressionAR -> . expressionAR PLUS expressionAR
    (12) expressionAR -> . expressionAR MINUS expressionAR
    (13) expressionAR -> . expressionAR TIMES expressionAR
    (14) expressionAR -> . expressionAR DIVIDE expressionAR
    (15) expressionAR -> . INT
    (16) expressionAR -> . FLOAT
    (17) expressionAR -> . LPAREN expressionAR RPAREN
    (18) expressionBo -> . expressionBo MORE expressionBo
    (19) expressionBo -> . expressionBo LESS expressionBo
    (20) expressionBo -> . expressionBo MOREEQUAL expressionBo
    (21) expressionBo -> . expressionBo LESSEQUAL expressionBo
    (22) expressionBo -> . expressionBo NOTEQUAL expressionBo
    (23) expressionBo -> . expressionBo EQUALSTO expressionBo
    (24) expressionBo -> . ID
    (25) expressionBo -> . TRUE
    (26) expressionBo -> . FALSE
    (27) expressionBo -> . LPAREN expressionBo RPAREN

    RCURLBRACKET    reduce using rule 2 (list -> inst .)
    ID              shift and go to state 10
    FOR             shift and go to state 11
    IF              shift and go to state 17
    INT             shift and go to state 16
    FLOAT           shift and go to state 12
    LPAREN          shift and go to state 14
    TRUE            shift and go to state 13
    FALSE           shift and go to state 18

    expressionAR                   shift and go to state 7
    inst                           shift and go to state 8
    list                           shift and go to state 23
    expressionBo                   shift and go to state 9

state 9

    (10) inst -> expressionBo .
    (18) expressionBo -> expressionBo . MORE expressionBo
    (19) expressionBo -> expressionBo . LESS expressionBo
    (20) expressionBo -> expressionBo . MOREEQUAL expressionBo
    (21) expressionBo -> expressionBo . LESSEQUAL expressionBo
    (22) expressionBo -> expressionBo . NOTEQUAL expressionBo
    (23) expressionBo -> expressionBo . EQUALSTO expressionBo

    ID              reduce using rule 10 (inst -> expressionBo .)
    FOR             reduce using rule 10 (inst -> expressionBo .)
    IF              reduce using rule 10 (inst -> expressionBo .)
    INT             reduce using rule 10 (inst -> expressionBo .)
    FLOAT           reduce using rule 10 (inst -> expressionBo .)
    LPAREN          reduce using rule 10 (inst -> expressionBo .)
    TRUE            reduce using rule 10 (inst -> expressionBo .)
    FALSE           reduce using rule 10 (inst -> expressionBo .)
    RCURLBRACKET    reduce using rule 10 (inst -> expressionBo .)
    MORE            shift and go to state 28
    LESS            shift and go to state 26
    MOREEQUAL       shift and go to state 29
    LESSEQUAL       shift and go to state 24
    NOTEQUAL        shift and go to state 27
    EQUALSTO        shift and go to state 25


state 10

    (4) inst -> ID . ASSIGN expressionAR
    (5) inst -> ID . ASSIGN expressionBo
    (24) expressionBo -> ID .

    ASSIGN          shift and go to state 30
    MORE            reduce using rule 24 (expressionBo -> ID .)
    LESS            reduce using rule 24 (expressionBo -> ID .)
    MOREEQUAL       reduce using rule 24 (expressionBo -> ID .)
    LESSEQUAL       reduce using rule 24 (expressionBo -> ID .)
    NOTEQUAL        reduce using rule 24 (expressionBo -> ID .)
    EQUALSTO        reduce using rule 24 (expressionBo -> ID .)
    ID              reduce using rule 24 (expressionBo -> ID .)
    FOR             reduce using rule 24 (expressionBo -> ID .)
    IF              reduce using rule 24 (expressionBo -> ID .)
    INT             reduce using rule 24 (expressionBo -> ID .)
    FLOAT           reduce using rule 24 (expressionBo -> ID .)
    LPAREN          reduce using rule 24 (expressionBo -> ID .)
    TRUE            reduce using rule 24 (expressionBo -> ID .)
    FALSE           reduce using rule 24 (expressionBo -> ID .)
    RCURLBRACKET    reduce using rule 24 (expressionBo -> ID .)


state 11

    (6) inst -> FOR . expressionBo LCURLBRACKET list RCURLBRACKET
    (18) expressionBo -> . expressionBo MORE expressionBo
    (19) expressionBo -> . expressionBo LESS expressionBo
    (20) expressionBo -> . expressionBo MOREEQUAL expressionBo
    (21) expressionBo -> . expressionBo LESSEQUAL expressionBo
    (22) expressionBo -> . expressionBo NOTEQUAL expressionBo
    (23) expressionBo -> . expressionBo EQUALSTO expressionBo
    (24) expressionBo -> . ID
    (25) expressionBo -> . TRUE
    (26) expressionBo -> . FALSE
    (27) expressionBo -> . LPAREN expressionBo RPAREN

    ID              shift and go to state 32
    TRUE            shift and go to state 13
    FALSE           shift and go to state 18
    LPAREN          shift and go to state 33

    expressionBo                   shift and go to state 31

state 12

    (16) expressionAR -> FLOAT .

    PLUS            reduce using rule 16 (expressionAR -> FLOAT .)
    MINUS           reduce using rule 16 (expressionAR -> FLOAT .)
    TIMES           reduce using rule 16 (expressionAR -> FLOAT .)
    DIVIDE          reduce using rule 16 (expressionAR -> FLOAT .)
    ID              reduce using rule 16 (expressionAR -> FLOAT .)
    FOR             reduce using rule 16 (expressionAR -> FLOAT .)
    IF              reduce using rule 16 (expressionAR -> FLOAT .)
    INT             reduce using rule 16 (expressionAR -> FLOAT .)
    FLOAT           reduce using rule 16 (expressionAR -> FLOAT .)
    LPAREN          reduce using rule 16 (expressionAR -> FLOAT .)
    TRUE            reduce using rule 16 (expressionAR -> FLOAT .)
    FALSE           reduce using rule 16 (expressionAR -> FLOAT .)
    RCURLBRACKET    reduce using rule 16 (expressionAR -> FLOAT .)
    RPAREN          reduce using rule 16 (expressionAR -> FLOAT .)


state 13

    (25) expressionBo -> TRUE .

    MORE            reduce using rule 25 (expressionBo -> TRUE .)
    LESS            reduce using rule 25 (expressionBo -> TRUE .)
    MOREEQUAL       reduce using rule 25 (expressionBo -> TRUE .)
    LESSEQUAL       reduce using rule 25 (expressionBo -> TRUE .)
    NOTEQUAL        reduce using rule 25 (expressionBo -> TRUE .)
    EQUALSTO        reduce using rule 25 (expressionBo -> TRUE .)
    ID              reduce using rule 25 (expressionBo -> TRUE .)
    FOR             reduce using rule 25 (expressionBo -> TRUE .)
    IF              reduce using rule 25 (expressionBo -> TRUE .)
    INT             reduce using rule 25 (expressionBo -> TRUE .)
    FLOAT           reduce using rule 25 (expressionBo -> TRUE .)
    LPAREN          reduce using rule 25 (expressionBo -> TRUE .)
    TRUE            reduce using rule 25 (expressionBo -> TRUE .)
    FALSE           reduce using rule 25 (expressionBo -> TRUE .)
    RCURLBRACKET    reduce using rule 25 (expressionBo -> TRUE .)
    LCURLBRACKET    reduce using rule 25 (expressionBo -> TRUE .)
    RPAREN          reduce using rule 25 (expressionBo -> TRUE .)


state 14

    (17) expressionAR -> LPAREN . expressionAR RPAREN
    (27) expressionBo -> LPAREN . expressionBo RPAREN
    (11) expressionAR -> . expressionAR PLUS expressionAR
    (12) expressionAR -> . expressionAR MINUS expressionAR
    (13) expressionAR -> . expressionAR TIMES expressionAR
    (14) expressionAR -> . expressionAR DIVIDE expressionAR
    (15) expressionAR -> . INT
    (16) expressionAR -> . FLOAT
    (17) expressionAR -> . LPAREN expressionAR RPAREN
    (18) expressionBo -> . expressionBo MORE expressionBo
    (19) expressionBo -> . expressionBo LESS expressionBo
    (20) expressionBo -> . expressionBo MOREEQUAL expressionBo
    (21) expressionBo -> . expressionBo LESSEQUAL expressionBo
    (22) expressionBo -> . expressionBo NOTEQUAL expressionBo
    (23) expressionBo -> . expressionBo EQUALSTO expressionBo
    (24) expressionBo -> . ID
    (25) expressionBo -> . TRUE
    (26) expressionBo -> . FALSE
    (27) expressionBo -> . LPAREN expressionBo RPAREN

    INT             shift and go to state 16
    FLOAT           shift and go to state 12
    LPAREN          shift and go to state 14
    ID              shift and go to state 32
    TRUE            shift and go to state 13
    FALSE           shift and go to state 18

    expressionAR                   shift and go to state 34
    expressionBo                   shift and go to state 35

state 15

    (1) statement -> FUNC MAIN LPAREN RPAREN LCURLBRACKET list . RCURLBRACKET

    RCURLBRACKET    shift and go to state 36


state 16

    (15) expressionAR -> INT .

    PLUS            reduce using rule 15 (expressionAR -> INT .)
    MINUS           reduce using rule 15 (expressionAR -> INT .)
    TIMES           reduce using rule 15 (expressionAR -> INT .)
    DIVIDE          reduce using rule 15 (expressionAR -> INT .)
    ID              reduce using rule 15 (expressionAR -> INT .)
    FOR             reduce using rule 15 (expressionAR -> INT .)
    IF              reduce using rule 15 (expressionAR -> INT .)
    INT             reduce using rule 15 (expressionAR -> INT .)
    FLOAT           reduce using rule 15 (expressionAR -> INT .)
    LPAREN          reduce using rule 15 (expressionAR -> INT .)
    TRUE            reduce using rule 15 (expressionAR -> INT .)
    FALSE           reduce using rule 15 (expressionAR -> INT .)
    RCURLBRACKET    reduce using rule 15 (expressionAR -> INT .)
    RPAREN          reduce using rule 15 (expressionAR -> INT .)


state 17

    (7) inst -> IF . expressionBo LCURLBRACKET list RCURLBRACKET ELSE LCURLBRACKET list RCURLBRACKET
    (8) inst -> IF . expressionBo LCURLBRACKET list RCURLBRACKET
    (18) expressionBo -> . expressionBo MORE expressionBo
    (19) expressionBo -> . expressionBo LESS expressionBo
    (20) expressionBo -> . expressionBo MOREEQUAL expressionBo
    (21) expressionBo -> . expressionBo LESSEQUAL expressionBo
    (22) expressionBo -> . expressionBo NOTEQUAL expressionBo
    (23) expressionBo -> . expressionBo EQUALSTO expressionBo
    (24) expressionBo -> . ID
    (25) expressionBo -> . TRUE
    (26) expressionBo -> . FALSE
    (27) expressionBo -> . LPAREN expressionBo RPAREN

    ID              shift and go to state 32
    TRUE            shift and go to state 13
    FALSE           shift and go to state 18
    LPAREN          shift and go to state 33

    expressionBo                   shift and go to state 37

state 18

    (26) expressionBo -> FALSE .

    MORE            reduce using rule 26 (expressionBo -> FALSE .)
    LESS            reduce using rule 26 (expressionBo -> FALSE .)
    MOREEQUAL       reduce using rule 26 (expressionBo -> FALSE .)
    LESSEQUAL       reduce using rule 26 (expressionBo -> FALSE .)
    NOTEQUAL        reduce using rule 26 (expressionBo -> FALSE .)
    EQUALSTO        reduce using rule 26 (expressionBo -> FALSE .)
    ID              reduce using rule 26 (expressionBo -> FALSE .)
    FOR             reduce using rule 26 (expressionBo -> FALSE .)
    IF              reduce using rule 26 (expressionBo -> FALSE .)
    INT             reduce using rule 26 (expressionBo -> FALSE .)
    FLOAT           reduce using rule 26 (expressionBo -> FALSE .)
    LPAREN          reduce using rule 26 (expressionBo -> FALSE .)
    TRUE            reduce using rule 26 (expressionBo -> FALSE .)
    FALSE           reduce using rule 26 (expressionBo -> FALSE .)
    RCURLBRACKET    reduce using rule 26 (expressionBo -> FALSE .)
    LCURLBRACKET    reduce using rule 26 (expressionBo -> FALSE .)
    RPAREN          reduce using rule 26 (expressionBo -> FALSE .)


state 19

    (14) expressionAR -> expressionAR DIVIDE . expressionAR
    (11) expressionAR -> . expressionAR PLUS expressionAR
    (12) expressionAR -> . expressionAR MINUS expressionAR
    (13) expressionAR -> . expressionAR TIMES expressionAR
    (14) expressionAR -> . expressionAR DIVIDE expressionAR
    (15) expressionAR -> . INT
    (16) expressionAR -> . FLOAT
    (17) expressionAR -> . LPAREN expressionAR RPAREN

    INT             shift and go to state 16
    FLOAT           shift and go to state 12
    LPAREN          shift and go to state 39

    expressionAR                   shift and go to state 38

state 20

    (12) expressionAR -> expressionAR MINUS . expressionAR
    (11) expressionAR -> . expressionAR PLUS expressionAR
    (12) expressionAR -> . expressionAR MINUS expressionAR
    (13) expressionAR -> . expressionAR TIMES expressionAR
    (14) expressionAR -> . expressionAR DIVIDE expressionAR
    (15) expressionAR -> . INT
    (16) expressionAR -> . FLOAT
    (17) expressionAR -> . LPAREN expressionAR RPAREN

    INT             shift and go to state 16
    FLOAT           shift and go to state 12
    LPAREN          shift and go to state 39

    expressionAR                   shift and go to state 40

state 21

    (11) expressionAR -> expressionAR PLUS . expressionAR
    (11) expressionAR -> . expressionAR PLUS expressionAR
    (12) expressionAR -> . expressionAR MINUS expressionAR
    (13) expressionAR -> . expressionAR TIMES expressionAR
    (14) expressionAR -> . expressionAR DIVIDE expressionAR
    (15) expressionAR -> . INT
    (16) expressionAR -> . FLOAT
    (17) expressionAR -> . LPAREN expressionAR RPAREN

    INT             shift and go to state 16
    FLOAT           shift and go to state 12
    LPAREN          shift and go to state 39

    expressionAR                   shift and go to state 41

state 22

    (13) expressionAR -> expressionAR TIMES . expressionAR
    (11) expressionAR -> . expressionAR PLUS expressionAR
    (12) expressionAR -> . expressionAR MINUS expressionAR
    (13) expressionAR -> . expressionAR TIMES expressionAR
    (14) expressionAR -> . expressionAR DIVIDE expressionAR
    (15) expressionAR -> . INT
    (16) expressionAR -> . FLOAT
    (17) expressionAR -> . LPAREN expressionAR RPAREN

    INT             shift and go to state 16
    FLOAT           shift and go to state 12
    LPAREN          shift and go to state 39

    expressionAR                   shift and go to state 42

state 23

    (3) list -> inst list .

    RCURLBRACKET    reduce using rule 3 (list -> inst list .)


state 24

    (21) expressionBo -> expressionBo LESSEQUAL . expressionBo
    (18) expressionBo -> . expressionBo MORE expressionBo
    (19) expressionBo -> . expressionBo LESS expressionBo
    (20) expressionBo -> . expressionBo MOREEQUAL expressionBo
    (21) expressionBo -> . expressionBo LESSEQUAL expressionBo
    (22) expressionBo -> . expressionBo NOTEQUAL expressionBo
    (23) expressionBo -> . expressionBo EQUALSTO expressionBo
    (24) expressionBo -> . ID
    (25) expressionBo -> . TRUE
    (26) expressionBo -> . FALSE
    (27) expressionBo -> . LPAREN expressionBo RPAREN

    ID              shift and go to state 32
    TRUE            shift and go to state 13
    FALSE           shift and go to state 18
    LPAREN          shift and go to state 33

    expressionBo                   shift and go to state 43

state 25

    (23) expressionBo -> expressionBo EQUALSTO . expressionBo
    (18) expressionBo -> . expressionBo MORE expressionBo
    (19) expressionBo -> . expressionBo LESS expressionBo
    (20) expressionBo -> . expressionBo MOREEQUAL expressionBo
    (21) expressionBo -> . expressionBo LESSEQUAL expressionBo
    (22) expressionBo -> . expressionBo NOTEQUAL expressionBo
    (23) expressionBo -> . expressionBo EQUALSTO expressionBo
    (24) expressionBo -> . ID
    (25) expressionBo -> . TRUE
    (26) expressionBo -> . FALSE
    (27) expressionBo -> . LPAREN expressionBo RPAREN

    ID              shift and go to state 32
    TRUE            shift and go to state 13
    FALSE           shift and go to state 18
    LPAREN          shift and go to state 33

    expressionBo                   shift and go to state 44

state 26

    (19) expressionBo -> expressionBo LESS . expressionBo
    (18) expressionBo -> . expressionBo MORE expressionBo
    (19) expressionBo -> . expressionBo LESS expressionBo
    (20) expressionBo -> . expressionBo MOREEQUAL expressionBo
    (21) expressionBo -> . expressionBo LESSEQUAL expressionBo
    (22) expressionBo -> . expressionBo NOTEQUAL expressionBo
    (23) expressionBo -> . expressionBo EQUALSTO expressionBo
    (24) expressionBo -> . ID
    (25) expressionBo -> . TRUE
    (26) expressionBo -> . FALSE
    (27) expressionBo -> . LPAREN expressionBo RPAREN

    ID              shift and go to state 32
    TRUE            shift and go to state 13
    FALSE           shift and go to state 18
    LPAREN          shift and go to state 33

    expressionBo                   shift and go to state 45

state 27

    (22) expressionBo -> expressionBo NOTEQUAL . expressionBo
    (18) expressionBo -> . expressionBo MORE expressionBo
    (19) expressionBo -> . expressionBo LESS expressionBo
    (20) expressionBo -> . expressionBo MOREEQUAL expressionBo
    (21) expressionBo -> . expressionBo LESSEQUAL expressionBo
    (22) expressionBo -> . expressionBo NOTEQUAL expressionBo
    (23) expressionBo -> . expressionBo EQUALSTO expressionBo
    (24) expressionBo -> . ID
    (25) expressionBo -> . TRUE
    (26) expressionBo -> . FALSE
    (27) expressionBo -> . LPAREN expressionBo RPAREN

    ID              shift and go to state 32
    TRUE            shift and go to state 13
    FALSE           shift and go to state 18
    LPAREN          shift and go to state 33

    expressionBo                   shift and go to state 46

state 28

    (18) expressionBo -> expressionBo MORE . expressionBo
    (18) expressionBo -> . expressionBo MORE expressionBo
    (19) expressionBo -> . expressionBo LESS expressionBo
    (20) expressionBo -> . expressionBo MOREEQUAL expressionBo
    (21) expressionBo -> . expressionBo LESSEQUAL expressionBo
    (22) expressionBo -> . expressionBo NOTEQUAL expressionBo
    (23) expressionBo -> . expressionBo EQUALSTO expressionBo
    (24) expressionBo -> . ID
    (25) expressionBo -> . TRUE
    (26) expressionBo -> . FALSE
    (27) expressionBo -> . LPAREN expressionBo RPAREN

    ID              shift and go to state 32
    TRUE            shift and go to state 13
    FALSE           shift and go to state 18
    LPAREN          shift and go to state 33

    expressionBo                   shift and go to state 47

state 29

    (20) expressionBo -> expressionBo MOREEQUAL . expressionBo
    (18) expressionBo -> . expressionBo MORE expressionBo
    (19) expressionBo -> . expressionBo LESS expressionBo
    (20) expressionBo -> . expressionBo MOREEQUAL expressionBo
    (21) expressionBo -> . expressionBo LESSEQUAL expressionBo
    (22) expressionBo -> . expressionBo NOTEQUAL expressionBo
    (23) expressionBo -> . expressionBo EQUALSTO expressionBo
    (24) expressionBo -> . ID
    (25) expressionBo -> . TRUE
    (26) expressionBo -> . FALSE
    (27) expressionBo -> . LPAREN expressionBo RPAREN

    ID              shift and go to state 32
    TRUE            shift and go to state 13
    FALSE           shift and go to state 18
    LPAREN          shift and go to state 33

    expressionBo                   shift and go to state 48
